--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,7 @@
-name: vagabond
+name: xeus-cling-docs
+
 channels:
   - conda-forge
+
 dependencies:
-  - xeus-cling=0.8.1
-  - xtensor=0.21.2
-  - xtensor-blas=0.17.1
-  - notebook
+  - breathe
